Creación previa de menú. Todavía no es responsive, por lo que para visualizarlo corréctamente se deberá de reducir el tamaño de pantalla a la de un móvil

--- a/index.html
+++ b/index.html
@@ -20,15 +20,20 @@
 
         <div class="menu">
             <div class="logo">
-                <img src="" alt="">
+                <img src="images/flickr_527573.png" alt="">
             </div>
-            <nav class="elementosNav container">
-                <ul>
-                    <li class="home"><a>Home</a></li>
-                    <li class="aboutus"><a>Sobre nosotros</a></li>
-                    <li class=services><a>Servicios</a></li>
-                    <li class="joinus"><a>Únete a nosotros</a></li>
-                </ul>
+            <nav class="elementosNav">
+                <div class="burguer">
+                    <!-- <img src="images/more_5950665.png"> -->
+                </div>
+                <div class="contenedor">
+                    <ul>
+                        <li class="element"><a href="#">Home</a></li>
+                        <li class="element"><a href="#">Sobre nosotros</a></li>
+                        <li class="element"><a href="#">Servicios</a></li>
+                        <li class="element"><a href="#">Únete a nosotros</a></li>
+                    </ul>
+                </div>
             </nav>
         </div>
 
