--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;1,300&family=Playfair+Display:ital,wght@1,500&display=swap"
         rel="stylesheet">
-
+        <script src="https://kit.fontawesome.com/783080ac9e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <main class="contenedorPrincipal">
-
+    <header class="contenedorPrincipal">
         <div class="menu">
             <div class="logo">
-                <img src="images/flickr_527573.png" alt="">
+                <a href="index.html"><img src="images/nature register1.png" alt="logo"></a>
             </div>
             <nav class="elementosNav">
                 <div class="burguer">
@@ -36,9 +35,56 @@
                 </div>
             </nav>
         </div>
+    </header>
+    <div class="velo">
+        <main>
+            <div class="presentacion">
+                <div class="fondo">
+                    <img class="imagenPresentacion" src="images/ninos-mirando-juntos-caracol.jpg">
+                </div>
+                <div class="texto">
+                    <h1 class="tituloPrincipal">Nature Register</h1>
+                    <h6 class="lema">
+                        ¡Registra y organiza tus observaciones!
+                    </h6>
+                </div>
+            </div>
+            <div class="cuerpo">
+                <p>
+                    ¿Tienes indecentes cantidades de imágenes de animales y plantas guardadas en carpetas y en galería?
+                    ¿No logras encontrar la imagen que estabas buscando entre tantas imágenes?
+                    Con Nature Register ahora puedes solucionar todos estos problemas.
+                </p>
+                <p>
+                    Nature Register se trata de una base de datos personal en la cual puedes registrar toda las
+                    observaciones de biodiversidad que has realizado
+                    con el objetiva de mantenerlas organizadas y operativas para su uso y consulta.
+                </p>
+            </div>
+            <div class="sabermas">
+                <button class="botonMas">Para saber más...</button>
+            </div>
+        </main>
+        <footer>
+            <div class="containerFooter">
+                <div class="legals">
+                    <ul>
+                        <a class="politicas">Políticas de privacidad</a>
+                        <a class="AcuerdoLicencia">Acuerdo de licencias</a>
+                        <a class="TerminoCondiciones">Término de condiciones</a>
+                        <a class="politicaCookies">Política de cookies</a>
+                    </ul>
+                </div>
+                <div class="socialMedias">
+                    <i class="fa-brands fa-facebook fa-2xl"></i>
+                    <i class="fa-brands fa-instagram fa-2xl"></i>
+                    <i class="fa-brands fa-twitter fa-2xl"></i>
+                </div>
+            </div>
 
-    </main>
-    <script src="index.js"></script>
+        </footer>
+        <script src="index.js"></script>
+    </div>
 </body>
 
 </html>
