Sacamos los html de las carpetas

--- a/dowloads.html
+++ b/dowloads.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <link rel="stylesheet" type="text/css" href="../styles/index.css">
+    <title>Servicios</title>
+    <link rel="stylesheet" type="text/css" href="../styles/stylesD.css">
     <link rel="stylesheet" type="text/css" href="../styles/headerFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,6 @@
 </head>
 
 <body>
-
     <header class="contenedorPrincipal">
 
         <div class="menu">
@@ -30,8 +29,8 @@
                 <div class="contenedor">
                     <ul>
                         <li class="elementI"><a href="index.html">Inicio</a></li>
-                        <li class="elementS"><a href="../htmls/services.html">Servicios</a></li>
-                        <li class="elementD"><a href="../htmls/dowloads.html">Descargas</a></li>
+                        <li class="elementS"><a href="services.html">Servicios</a></li>
+                        <li class="elementD"><a href="dowloads.html">Descargas</a></li>
                     </ul>
                 </div>
             </nav>
@@ -40,33 +39,7 @@
     <div class="all">
         <div class="velo">
             <main>
-                <div class="presentacion">
-                    <div class="fondo">
-                        <img class="imagenPresentacion" src="../images/ninos-mirando-juntos-caracol.jpg">
-                    </div>
-                    <div class="texto">
-                        <h1 class="tituloPrincipal">Nature Register</h1>
-                        <h6 class="lema">
-                            ¡Registra y organiza tus observaciones!
-                        </h6>
-                    </div>
-                </div>
-                <div class="cuerpo">
-                    <p>
-                        ¿Tienes indecentes cantidades de imágenes de animales y plantas guardadas en carpetas y en
-                        galería?
-                        ¿No logras encontrar la imagen que estabas buscando entre tantas imágenes?
-                        Con Nature Register ahora puedes solucionar todos estos problemas.
-                    </p>
-                    <p>
-                        Nature Register se trata de una base de datos personal en la cual puedes registrar toda las
-                        observaciones de biodiversidad que has realizado
-                        con el objetiva de mantenerlas organizadas y operativas para su uso y consulta.
-                    </p>
-                </div>
-                <div class="sabermas">
-                    <button class="botonMas"><a href="../htmls/services.html">Para saber más...</a></button>
-                </div>
+
             </main>
         </div>
     </div>
@@ -90,7 +63,6 @@
 
     </footer>
     <script src="../js/index.js"></script>
-
 </body>
 
 </html>
