--- a/services.html
+++ b/services.html
@@ -29,8 +29,8 @@
                 <div class="contenedor">
                     <ul>
                         <li class="elementI"><a href="index.html">Inicio</a></li>
-                        <li class="elementS"><a href="../htmls/services.html">Servicios</a></li>
-                        <li class="elementD"><a href="../htmls/dowloads.html">Descargas</a></li>
+                        <li class="elementS"><a href="services.html">Servicios</a></li>
+                        <li class="elementD"><a href="dowloads.html">Descargas</a></li>
                     </ul>
                 </div>
             </nav>
