Arreglamos fallos de visualización

--- a/dowloads.html
+++ b/dowloads.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" type="text/css" href="../styles/stylesD.css">
-    <link rel="stylesheet" type="text/css" href="../styles/headerFooter.css">
+    <link rel="stylesheet" type="text/css" href="styles/stylesD.css">
+    <link rel="stylesheet" type="text/css" href="styles/headerFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,7 +20,7 @@
 
         <div class="menu">
             <div class="logo">
-                <a href="index.html"><img src="../images/nature register1.png" alt="logo"></a>
+                <a href="index.html"><img src="images/nature register1.png" alt="logo"></a>
             </div>
             <nav class="elementosNav">
                 <div class="burguer">
@@ -62,7 +62,7 @@
 
 
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
