--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" type="text/css" href="../styles/index.css">
-    <link rel="stylesheet" type="text/css" href="../styles/headerFooter.css">
+    <link rel="stylesheet" type="text/css" href="styles/index.css">
+    <link rel="stylesheet" type="text/css" href="styles/headerFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -21,7 +21,7 @@
 
         <div class="menu">
             <div class="logo">
-                <a href="index.html"><img src="../images/nature register1.png" alt="logo"></a>
+                <a href="index.html"><img src="images/nature register1.png" alt="logo"></a>
             </div>
             <nav class="elementosNav">
                 <div class="burguer">
@@ -42,7 +42,7 @@
             <main>
                 <div class="presentacion">
                     <div class="fondo">
-                        <img class="imagenPresentacion" src="../images/ninos-mirando-juntos-caracol.jpg">
+                        <img class="imagenPresentacion" src="images/ninos-mirando-juntos-caracol.jpg">
                     </div>
                     <div class="texto">
                         <h1 class="tituloPrincipal">Nature Register</h1>
@@ -89,7 +89,7 @@
 
 
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 
