--- a/services.html
+++ b/services.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
-    <link rel="stylesheet" type="text/css" href="../styles/stylesS.css">
-    <link rel="stylesheet" type="text/css" href="../styles/headerFooter.css">
+    <link rel="stylesheet" type="text/css" href="styles/stylesS.css">
+    <link rel="stylesheet" type="text/css" href="styles/headerFooter.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,7 +20,7 @@
 
         <div class="menu">
             <div class="logo">
-                <a href="index.html"><img src="../images/nature register1.png" alt="logo"></a>
+                <a href="index.html"><img src="images/nature register1.png" alt="logo"></a>
             </div>
             <nav class="elementosNav">
                 <div class="burguer">
@@ -43,23 +43,25 @@
                     <p class="inicio">
                         ¿Qué nos ofrece Nature Register?
                     </p>
-                    <img class="img0" src="../images/mainP.PNG">
+                    <img class="img0" src="images/mainP.PNG">
                     <p class="explicacion">El sofware Nature Register se trata de un programa creado en Java, que nos
                         permite
                         poder organizar y gestionar la información de nuestras observaciones de la mejor manera posible.
-                       <br>Para ello hacemos uso de una base de datos SQLite, la cual nos permitirá acceder a la información de
+                        <br>Para ello hacemos uso de una base de datos SQLite, la cual nos permitirá acceder a la
+                        información de
                         nuestras observaciones siempre que queramos.
-                        <br>En Internet existen numerosas páginas web que hacen posible todo lo mencionado anteriormente.
+                        <br>En Internet existen numerosas páginas web que hacen posible todo lo mencionado
+                        anteriormente.
                         Sin embargo,
                         a día de hoy no existe ningún sofware oficial que nos ayude con la organización de nuestros
                         registros a nivel local y privado.
                     </p>
                     <h1 class="ventajas">Funcionalidades y ventajas</h1>
-                    
+
                 </div>
                 <div class="paneles">
                     <div class="panel1">
-                        <img class="img1" src="../images/addingDat.PNG">
+                        <img class="img1" src="images/addingDat.PNG">
                         <p class="vtj1">Una de las principales funcionalidades de Nature Register, evidentemente, es la
                             de crear registros.
                             Cada registro contendrá información relevante, ateniéndonos a las recomendaciones de la
@@ -72,7 +74,7 @@
                         </p>
                     </div>
                     <div class="panel2">
-                        <img class="img2" src="../images/database.PNG">
+                        <img class="img2" src="images/database.PNG">
                         <p class="vtj2">
                             Una vez completada toda la información del registro, se añadirá a una base de datos local la
                             cual será
@@ -84,7 +86,7 @@
                         </p>
                     </div>
                     <div class="panel3">
-                        <img class="img3" src="../images/watchingImages.PNG">
+                        <img class="img3" src="images/watchingImages.PNG">
                         <p class="vtj3">
                             A veces, entre tanta multitud de registros es totalmente normal no acordarnos de algunas
                             especies. Por ello, Nature Register
@@ -116,7 +118,7 @@
 
 
     </footer>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
