--- a/services.html
+++ b/services.html
@@ -17,7 +17,6 @@
 
 <body>
     <header class="contenedorPrincipal">
-
         <div class="menu">
             <div class="logo">
                 <a href="index.html"><img src="images/nature register1.png" alt="logo"></a>
@@ -30,7 +29,7 @@
                     <ul>
                         <li class="elementI"><a href="index.html">Inicio</a></li>
                         <li class="elementS"><a href="services.html">Servicios</a></li>
-                        <li class="elementD"><a href="dowloads.html">Descargas</a></li>
+                        <li class="elementD"><a href="inicioSesion.html">Iniciar sesión</a></li>
                     </ul>
                 </div>
             </nav>
@@ -90,9 +89,9 @@
                         <p class="vtj3">
                             A veces, entre tanta multitud de registros es totalmente normal no acordarnos de algunas
                             especies. Por ello, Nature Register
-                            tiene implementado un visor de observaciones, que nos permitirá ver la imagen de todos los
+                            presenta un visor de observaciones, que nos permitirá ver la imagen de todos los
                             registros añadidos en la base de
-                            datos."
+                            datos, así como descargarlos.
                         </p>
                     </div>
                 </div>
